[package]
name = "hours-contact-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
mail-service-api = {version = "*", git = "https://github.com/innexgo/mail-service-api", features=["client"]}
clap = { version = "3.1.18", features = ["derive"] }
actix-web = "4.0.1"
derive_more = "0.99.17"
